--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,23 +1,23 @@
 <!-- NAVIGATION -->
 <nav id="navigation">
-    <!-- container -->
-    <div class="container">
-        <!-- responsive-nav -->
-        <div id="responsive-nav">
-            <!-- NAV -->
-            <ul class="main-nav nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Hot Deals</a></li>
-                <li><a href="#">Categories</a></li>
-                <li><a href="#">Laptops</a></li>
-                <li><a href="#">Smartphones</a></li>
-                <li><a href="/admin/add-product">Add Product</a></li>
-                <li><a href="/admin/products">Admin Products</a></li>
-            </ul>
-            <!-- /NAV -->
-        </div>
-        <!-- /responsive-nav -->
+  <!-- container -->
+  <div class="container">
+    <!-- responsive-nav -->
+    <div id="responsive-nav">
+      <!-- NAV -->
+      <ul class="main-nav nav navbar-nav">
+        <li class="active"><a href="#">Home</a></li>
+        <li><a href="#">Hot Deals</a></li>
+        <li><a href="#">Categories</a></li>
+        <li><a href="/cart">Cart</a></li>
+        <li><a href="#">Orders</a></li>
+        <li><a href="/admin/add-product">Add Product</a></li>
+        <li><a href="/admin/products">Admin Products</a></li>
+      </ul>
+      <!-- /NAV -->
     </div>
-    <!-- /container -->
+    <!-- /responsive-nav -->
+  </div>
+  <!-- /container -->
 </nav>
 <!-- /NAVIGATION -->
