--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -107,7 +107,7 @@
 												<div class="product-body">
 													<p class="product-category"><%= product.category %></p>
 													<h3 class="product-name"><a href="#"><%= product.name %></a></h3>
-													<h4 class="product-price"><%= product.price %>$<del class="product-old-price">$990.00</del></h4>
+													<h4 class="product-price"><%= product.price %>TK<del class="product-old-price"></del></h4>
 													<div class="product-rating">
 														<i class="fa fa-star"></i>
 														<i class="fa fa-star"></i>
