--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -16,7 +16,7 @@
 			<div class="container">
 				<!-- row -->
 				<div class="row">
-					<div class="col-md-12">
+					<!-- <div class="col-md-12">
 						<ul class="breadcrumb-tree">
 							<li><a href="#">Home</a></li>
 							<li><a href="#">All Categories</a></li>
@@ -24,7 +24,7 @@
 							<li><a href="#">Headphones</a></li>
 							<li class="active">Product name goes here</li>
 						</ul>
-					</div>
+					</div> -->
 				</div>
 				<!-- /row -->
 			</div>
