--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -73,7 +73,7 @@
 					<!-- section title -->
 					<div class="col-md-12">
 						<div class="section-title">
-							<h3 class="title">New Products</h3>
+							<h3 class="title">Products</h3>
 							<div class="section-nav">
 								<ul class="section-tab-nav tab-nav">
 									<li class="active"><a data-toggle="tab" href="#tab1">Laptops</a></li>
@@ -117,7 +117,7 @@
 													</div>
 													<div class="product-btns">
 														
-														<button class="add-to-wishlist"><i class="fa fa-heart-o"></i><span class="tooltipp">add to wishlist</span></button>
+														<button class="add-to-wishlist" style="color: red;"><i class="fa fa-heart"></i><span class="tooltipp">add to wishlist</span></button>
 														<!-- <button class="add-to-compare" onclick="location.href = '/edit'"><i class="fa fa-exchange"></i><span class="tooltipp">edit</span></button> -->
 														<button class="quick-view" onclick="location.href = '/products/<%= product._id %>'"><i class="fa fa-eye"></i><span class="tooltipp">view</span></button>
 													</div>
