--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -135,7 +135,7 @@
 							<ul class="product-btns">
 								<input type="hidden" value="<%= prod._id %>" name="productId">
                                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-								<li><a href="#"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
+								<li><a style="color: rgb(248, 91, 91);" href="#"><i class="fa fa-heart"></i> add to wishlist</a></li>
 								<li><a href="/admin/edit-product/<%= prod._id %>?edit=true"><i class="fa fa-exchange"></i> edit</a></li>
 							</ul>
 
