--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     <title><%= pageTitle %></title>
+    <link rel="shortcut icon" href="/images/favicon.png">
 
     <!-- Google font -->
     <link
@@ -29,6 +30,8 @@
 
     <!-- Custom stlylesheet -->
     <link rel="stylesheet" href="/css/style.css" />
+
+    
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
