Order functionality added

--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -10,7 +10,7 @@
         <li><a href="#">Hot Deals</a></li>
         <li><a href="#">Categories</a></li>
         <li><a href="/cart">Cart</a></li>
-        <li><a href="#">Orders</a></li>
+        <li><a href="/orders">Orders</a></li>
         <li><a href="/admin/add-product">Add Product</a></li>
         <li><a href="/admin/products">Admin Products</a></li>
       </ul>
