--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -85,7 +85,10 @@
   </div>
 
   <% } else { %>
-  <h1>No Products in Cart!</h1>
+    <div style="text-align: center;"">
+      <h1>No Products in Cart!</h1>
+
+    </div>
   <% } %>
 </main>
 
