--- a/views/shop/checkout.ejs
+++ b/views/shop/checkout.ejs
@@ -1,4 +1,9 @@
 <%- include('../includes/head.ejs') %>
+<style>
+     .box{
+        display: none;
+}
+</style>
   <body>
     <!-- HEADER -->
 	<%- include('../includes/header.ejs') %>
@@ -108,94 +113,7 @@
                 </div>
               </div>
             </div>
-            <!-- /Billing Details -->
-
-            <!-- Shiping Details -->
-            <!-- <div class="shiping-details">
-              <div class="section-title">
-                <h3 class="title">Shiping address</h3>
-              </div>
-              <div class="input-checkbox">
-                <input type="checkbox" id="shiping-address" />
-                <label for="shiping-address">
-                  <span></span>
-                  Ship to a diffrent address?
-                </label>
-                <div class="caption">
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="text"
-                      name="first-name"
-                      placeholder="First Name"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="text"
-                      name="last-name"
-                      placeholder="Last Name"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="email"
-                      name="email"
-                      placeholder="Email"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="text"
-                      name="address"
-                      placeholder="Address"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="text"
-                      name="city"
-                      placeholder="City"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="text"
-                      name="country"
-                      placeholder="Country"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="text"
-                      name="zip-code"
-                      placeholder="ZIP Code"
-                    />
-                  </div>
-                  <div class="form-group">
-                    <input
-                      class="input"
-                      type="tel"
-                      name="tel"
-                      placeholder="Telephone"
-                    />
-                  </div>
-                </div>
-              </div>
-            </div> -->
-            <!-- /Shiping Details -->
-
-            <!-- Order notes -->
-            <!-- <div class="order-notes">
-              <textarea class="input" placeholder="Order Notes"></textarea>
-            </div>
-             /Order notes -->
+            
           </div> 
 
           <!-- Order Details -->
@@ -228,10 +146,10 @@
             </div>
             <div class="payment-method">
               <div class="input-radio">
-                <input type="radio" name="payment" id="payment-1" />
+                <input type="radio" name="payment" id="payment-1" onclick="showMe('div1')"/>
                 <label for="payment-1">
                   <span></span>
-                  Direct Bank Transfer
+                  Cash On Delivary
                 </label>
                 <div class="caption">
                   <p>
@@ -242,24 +160,10 @@
                 </div>
               </div>
               <div class="input-radio">
-                <input type="radio" name="payment" id="payment-2" />
-                <label for="payment-2">
-                  <span></span>
-                  Cheque Payment
-                </label>
-                <div class="caption">
-                  <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua.
-                  </p>
-                </div>
-              </div>
-              <div class="input-radio">
-                <input type="radio" name="payment" id="payment-3" />
+                <input type="radio" name="payment" id="payment-3" onclick="showMe('div2')" />
                 <label for="payment-3">
                   <span></span>
-                  Paypal System
+                  Stripe Payment  
                 </label>
                 <div class="caption">
                   <p>
@@ -277,7 +181,25 @@
                 I've read and accept the <a href="#">terms & conditions</a>
               </label>
             </div>
-            <a href="#" class="primary-btn order-submit">Place order</a>
+            <div id="div1" style="display: none;">
+              <a href="/create-order" class="primary-btn order-submit">Place order</a>
+
+            </div>
+            <div id="div2" style="display: none;">
+              <!-- <a href="#" class="primary-btn order-submit">Stripe Order </a> -->
+              <form action="/create-order-stripe" method="POST" style="text-align: center;">
+                <script
+                  src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                  data-key="pk_test_51GqeYUAabT662b5quoUQRa8ZyUiZQH84gdyOIFRnK9bM3W60jBwPmUi5i3SpuCymjF0OfdwD7xQrvhifiwEYLSKC00nWVpuJcd"
+                  data-amount="<%= sum * 100 %>"
+                  data-name="Your Order"
+                  data-description="All the items you ordewred"
+                  data-image="https://stripe.com/img/documentation/checkout/marketplace.png"
+                  data-locale="auto"
+                  data-currency="usd">
+                </script>
+              </form>
+            </div>
           </div>
           <!-- /Order Details -->
         </div>
@@ -288,5 +210,27 @@
     <!-- /SECTION -->
 
     <%- include('../includes/end.ejs') %>
+
+    <script>
+
+      function showMe(box){
+        document.getElementById('div1').style.display = 'none';
+        document.getElementById('div2').style.display = 'none';
+
+        var chboxs = document.getElementsByName("payment");
+        
+        // console.log(chboxs);
+        var vis = "none";
+        for(var i=0;i<chboxs.length;i++) { 
+            if(chboxs[i].checked){
+             vis = "block";
+                break;
+            }
+        }
+        document.getElementById(box).style.display = vis;
+
+      }
+    </script>
+    
   </body>
 </html>
