--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -80,7 +80,7 @@
   <body>
     <main>
       <% if (errorMessage) { %>
-      <div class="user-message user-message--error"><%= errorMessage %></div>
+      <div class="user-message user-message--error" style="color: white;"><%= errorMessage %></div>
       <% } %>
     </main>
     <form
