--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -157,7 +157,9 @@
 									<% } else { %>
 										<%- include('../includes/add-to-wishlist.ejs',{product: prod}) %>
 									<% } %>	</li>
+									<% if(prod.userId.toString() === user._id.toString()) {  %>
 								<li><a href="/admin/edit-product/<%= prod._id %>?edit=true"><i class="fa fa-exchange"></i> edit</a></li>
+								<% } %>
 							</ul>
 
 							<ul class="product-links">
