Bug fixed and deployment prep added

--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -157,8 +157,10 @@
 									<% } else { %>
 										<%- include('../includes/add-to-wishlist.ejs',{product: prod}) %>
 									<% } %>	</li>
+									<% if (isAuthenticated) { %> 
 									<% if(prod.userId.toString() === user._id.toString()) {  %>
 								<li><a href="/admin/edit-product/<%= prod._id %>?edit=true"><i class="fa fa-exchange"></i> edit</a></li>
+								<% } %>
 								<% } %>
 							</ul>
 
