email system edited

--- a/views/includes/header.ejs
+++ b/views/includes/header.ejs
@@ -111,7 +111,7 @@
                         <span class="qty"></span><%= arrayItem.price %>TK
                       </h4>
                     </div>
-                    <form action="/cart-delete-item" method="post">
+                    <form action="/cart-wishlist-item" method="post">
                       <input
                         type="hidden"
                         value="<%= arrayItem.productId._id %>"
