--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -132,10 +132,14 @@ button:hover {
 
     <label for="confirmPassword"><b>Repeat Password</b></label>
     <input type="password" placeholder="Confirm Password" name="confirmPassword">
+
+    <label for="isAdmin"><b>Admin Code</b></label>
+    <input type="text" placeholder="Required to sign up as a Admin (*optional)" name="isAdmin" >
     
     <label>
       <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
     </label>
+   
     
     <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
 
