Time functionality added

--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -70,6 +70,8 @@
                                                 </div>
                                             <div class="add-to-cart">
                                                 <form action="/cart" method="post">
+                                                    <input type="hidden" value="<%= product._id %>" name="productId">
+                                                        <input type="hidden" value="<%= csrfToken  %>" name="_csrf">
                                                 <button class="add-to-cart-btn" type="submit"><i class="fa fa-shopping-cart"></i> Add to Cart</button>
                                             </form>
                                             </div>
