--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -87,7 +87,7 @@
 					<div class="col-md-5">
 						<div class="product-details">
 							<h2 class="product-name"><%= prod.name %></h2>
-							<div>
+							<!-- <div>
 								<div class="product-rating">
 									<i class="fa fa-star"></i>
 									<i class="fa fa-star"></i>
@@ -96,12 +96,12 @@
 									<i class="fa fa-star-o"></i>
 								</div>
 								<a class="review-link" href="#">10 Review(s) | Add your review</a>
-							</div>
+							</div> -->
 							<div>
-								<h3 class="product-price"><%= prod.price %>$ <del class="product-old-price">$990.00</del></h3>
+								<h3 class="product-price"><%= prod.price %>TK <del class="product-old-price"></del></h3>
 								<span class="product-available">In Stock</span>
 							</div>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p><%= prod.description%></p>
 
 							<div class="product-options">
 								
@@ -188,8 +188,8 @@
 							<!-- product tab nav -->
 							<ul class="tab-nav">
 								<li class="active"><a data-toggle="tab" href="#tab1">Description</a></li>
-								<li><a data-toggle="tab" href="#tab2">Details</a></li>
-								<li><a data-toggle="tab" href="#tab3">Reviews (3)</a></li>
+								<!-- <li><a data-toggle="tab" href="#tab2">Details</a></li> -->
+								<li><a data-toggle="tab" href="#tab3">Reviews (<%= prod.reviews.length %>)</a></li>
 							</ul>
 							<!-- /product tab nav -->
 
@@ -199,20 +199,20 @@
 								<div id="tab1" class="tab-pane fade in active">
 									<div class="row">
 										<div class="col-md-12">
-											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											<p><%= prod.description %></p>
 										</div>
 									</div>
 								</div>
 								<!-- /tab1  -->
 
 								<!-- tab2  -->
-								<div id="tab2" class="tab-pane fade in">
+								<!-- <div id="tab2" class="tab-pane fade in">
 									<div class="row">
 										<div class="col-md-12">
 											<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 										</div>
 									</div>
-								</div>
+								</div> -->
 								<!-- /tab2  -->
 
 								<!-- tab3  -->
@@ -306,54 +306,35 @@
 										<div class="col-md-6">
 											<div id="reviews">
 												<ul class="reviews">
-													<li>
-														<div class="review-heading">
-															<h5 class="name">John</h5>
-															<p class="date">27 DEC 2018, 8:0 PM</p>
-															<div class="review-rating">
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star-o empty"></i>
+												<% if(prod.reviews.length > 0) { %>
+												<%	prod.reviews.forEach(prodItem=>{ %>
+														<li>
+															<div class="review-heading">
+																<h5 class="name"><%=prodItem.name%></h5>
+																<p class="date"><%= prodItem.uploadTime%></p>
+																<!-- <div class="review-rating">
+																	<i class="fa fa-star"></i>
+																	<i class="fa fa-star"></i>
+																	<i class="fa fa-star"></i>
+																	<i class="fa fa-star"></i>
+																	<i class="fa fa-star-o empty"></i>
+																</div> -->
 															</div>
-														</div>
-														<div class="review-body">
-															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-														</div>
-													</li>
-													<li>
-														<div class="review-heading">
-															<h5 class="name">John</h5>
-															<p class="date">27 DEC 2018, 8:0 PM</p>
-															<div class="review-rating">
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star-o empty"></i>
+															<div class="review-body">
+																<p style=" border: 1px solid;
+																padding: 10px;
+																box-shadow: 5px 10px 18px rgb(17, 68, 122);
+																outline: none;"><%= prodItem.review %></p>
 															</div>
-														</div>
-														<div class="review-body">
-															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-														</div>
-													</li>
-													<li>
-														<div class="review-heading">
-															<h5 class="name">John</h5>
-															<p class="date">27 DEC 2018, 8:0 PM</p>
-															<div class="review-rating">
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star"></i>
-																<i class="fa fa-star-o empty"></i>
-															</div>
-														</div>
-														<div class="review-body">
-															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</p>
-														</div>
-													</li>
+														</li>
+												<%	}) %>
+													
+													
+
+												<%	} else { %>
+														<p style="font-weight: bold; font-size: large;">No Reviews So Far!!</p>
+												<%	} %>
+										
 												</ul>
 												<ul class="reviews-pagination">
 													<li class="active">1</li>
@@ -362,6 +343,7 @@
 													<li><a href="#">4</a></li>
 													<li><a href="#"><i class="fa fa-angle-right"></i></a></li>
 												</ul>
+												
 											</div>
 										</div>
 										<!-- /Reviews -->
@@ -369,11 +351,11 @@
 										<!-- Review Form -->
 										<div class="col-md-3">
 											<div id="review-form">
-												<form class="review-form">
-													<input class="input" type="text" placeholder="Your Name">
-													<input class="input" type="email" placeholder="Your Email">
-													<textarea class="input" placeholder="Your Review"></textarea>
-													<div class="input-rating">
+												<form class="review-form" method="POST" action="/review-product" >
+													<input class="input" type="text" name='name' value="<%= user.name %>">
+													<input class="input" type="email" name="email" value="<%= user.email %>">
+													<textarea class="input" name="product_review" placeholder="Your Review"></textarea>
+													<!-- <div class="input-rating">
 														<span>Your Rating: </span>
 														<div class="stars">
 															<input id="star5" name="rating" value="5" type="radio"><label for="star5"></label>
@@ -382,8 +364,10 @@
 															<input id="star2" name="rating" value="2" type="radio"><label for="star2"></label>
 															<input id="star1" name="rating" value="1" type="radio"><label for="star1"></label>
 														</div>
-													</div>
-													<button class="primary-btn">Submit</button>
+													</div> -->
+													<input type="hidden" value="<%= prod._id %>" name="productId">
+													<input type="hidden" name="_csrf" value="<%= csrfToken %>" />
+													<button type="submit" class="primary-btn">Submit</button>
 												</form>
 											</div>
 										</div>
